--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,5 @@
 {
-    "dependencies": {
+  "dependencies": {
     "com.ptc.vuforia.engine": "file:com.ptc.vuforia.engine-10.18.4.tgz",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
@@ -13,6 +13,7 @@
     "com.unity.ide.visualstudio": "2.0.21",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
+    "com.unity.render-pipelines.universal": "14.0.9",
     "com.unity.services.analytics": "5.0.0",
     "com.unity.services.core": "1.11.0",
     "com.unity.test-framework": "1.1.33",
