--- a/.gitattributes
+++ b/.gitattributes
@@ -14,7 +14,6 @@
 *.[tT][gG][aA] filter=lfs diff=lfs merge=lfs -text
 *.[tT][iI][fF] filter=lfs diff=lfs merge=lfs -text
 *.[tT][iI][fF][fF] filter=lfs diff=lfs merge=lfs -text
-
 # 3D formats
 *.3[dD][mM] filter=lfs diff=lfs merge=lfs -text
 *.3[dD][sS] filter=lfs diff=lfs merge=lfs -text
@@ -38,7 +37,6 @@
 *.[sS][kK][pP] filter=lfs diff=lfs merge=lfs -text
 *.[sS][tT][lL] filter=lfs diff=lfs merge=lfs -text
 *.[zZ][tT][lL] filter=lfs diff=lfs merge=lfs -text
-
 # Audio formats
 *.[aA][iI][fF] filter=lfs diff=lfs merge=lfs -text
 *.[aA][aA][cC] filter=lfs diff=lfs merge=lfs -text
@@ -51,7 +49,6 @@
 *.[sS]3[mM] filter=lfs diff=lfs merge=lfs -text
 *.[wW][aA][vV] filter=lfs diff=lfs merge=lfs -text
 *.[xX][mM] filter=lfs diff=lfs merge=lfs -text
-
 # Video formats
 *.[aA][sS][fF] filter=lfs diff=lfs merge=lfs -text
 *.[aA][vV][iI] filter=lfs diff=lfs merge=lfs -text
@@ -62,19 +59,17 @@
 *.[mM][pP][gG] filter=lfs diff=lfs merge=lfs -text
 *.[oO][gG][vV] filter=lfs diff=lfs merge=lfs -text
 *.[wW][mM][vV] filter=lfs diff=lfs merge=lfs -text
-
 # Packaging
 *.7[zZ] filter=lfs diff=lfs merge=lfs -text
 *.[bB][zZ]2 filter=lfs diff=lfs merge=lfs -text
-*.[gG][zZ] filter=lfs diff=lfs merge=lfs -text
+*.[tT][gG][zZ] filter=lfs diff=lfs merge=lfs -text
 *.[rR][aA][rR] filter=lfs diff=lfs merge=lfs -text
 *.[tT][aA][rR] filter=lfs diff=lfs merge=lfs -text
 *.[tT][aA][rR].[gG][zZ] filter=lfs diff=lfs merge=lfs -text
 *.[zZ][iI][pP] filter=lfs diff=lfs merge=lfs -text
-
 # Fonts
 *.[oO][tT][fF] filter=lfs diff=lfs merge=lfs -text
 *.[tT][tT][fF] filter=lfs diff=lfs merge=lfs -text
-
 # Documents
 *.[pP][dD][fF] filter=lfs diff=lfs merge=lfs -text
+*.tgz filter=lfs diff=lfs merge=lfs -text
